src/index.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

#root {
  position: fixed;
  width: 100vw;
  height: 100vh;
  background: ivory;
}


/*Interface*/
.interface {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family: 'Bebas Neue', sans-serif;
  pointer-events: none;
}

/*Top part*/
.interface .top-part {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.5rem;
  color: white;
  background-color: #0000007a;
  padding: 10px;
}

.interface .top-part .time {
  display: flex;
  gap: 20px;
}

.interface .restart-btn {
  pointer-events: auto;
  cursor: pointer;
}

/*Results*/
.result {
  font-size: 3rem;
  text-align: center;
  color: white;
  background-color: #0000007a;
  padding: 5px;
}

/*Controls*/
.controls {
  padding-bottom: 35px;
}

.controls .wrapper {
  display: flex;
  justify-content: center;
}

.controls .key {
  width: 40px;
  height: 40px;
  margin: 4px;
  border: 2px solid #ffffff;
  background: #82828244;
}

.controls .key.space {
  width: 144px;
}

.controls .key.active {
  background: #0000007a;
}


@media screen and (max-width: 768px) {
  .controls {
    display: flex;
    justify-content: space-between;
    align-items: end;
    padding-bottom: 10px;
  }

  .controls .key {
    width: 65px;
    height: 65px;
    pointer-events: auto;
    cursor: pointer;
  }

  .controls .key.space {
    width: 288px;
  }
}

@media screen and (max-width: 525px) {
  .controls .key {
    width: 50px;
    height: 50px;
  }

  .controls .key.space {
    width: 200px;
  }
}


@media screen and (max-width: 380px) {
  .controls .key.space {
    width: 130px;
  }
}

